página y metodos para Productos...

--- a/web/WEB-INF/templates/plantilla.xhtml
+++ b/web/WEB-INF/templates/plantilla.xhtml
@@ -18,6 +18,7 @@
             <h:form>
                 <p:menubar>
                     <p:menuitem value="Personas" url="persona.xhtml"></p:menuitem>
+                    <p:menuitem value="Productos" url="producto.xhtml"></p:menuitem>
                 </p:menubar>
             </h:form>
         </ui:insert>
