Ventana de ventas...

--- a/web/WEB-INF/templates/plantilla.xhtml
+++ b/web/WEB-INF/templates/plantilla.xhtml
@@ -17,6 +17,7 @@
         <ui:insert name="top">
             <h:form>
                 <p:menubar>
+                    <p:menuitem value="Ventas" url="venta.xhtml"></p:menuitem>
                     <p:menuitem value="Personas" url="persona.xhtml"></p:menuitem>
                     <p:menuitem value="Productos" url="producto.xhtml"></p:menuitem>
                 </p:menubar>
